--- a/src/app/account-navbar/account-navbar.component.html
+++ b/src/app/account-navbar/account-navbar.component.html
@@ -1,10 +1,8 @@
-<section class="navbar">
+<section class="navbar" #navbar>
     <nav class="navbar-container">
-        <div class="navbar-container__menu"><mat-icon>apps</mat-icon></div>
+        <div class="navbar-container__menu" (click)='menuOpen($event,navbar)'><mat-icon>apps</mat-icon></div>
         <div class="navbar-container__content">
             <ul class="navbar-container__content-list">
-                <!-- <li class="navbar-container__content-list--item">  
-                </li> -->
                 <li class="navbar-container__content-list--item">
                     <mat-icon matBadgePosition="above" matBadgeSize="small" matBadge="3" matBadgeColor="warn"class="notification">notifications_none</mat-icon>
                 </li>
