--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -1,6 +1,10 @@
 <section class="friends">
+    
     <app-sidebar></app-sidebar>
+
     <section class="friends-container">
+        <app-account-navbar></app-account-navbar>
+
         <div class="friends-container__search">
             <input class="friends-container__search-input" type="text">
             <div class="friends-container__search-dropdown"></div>
