--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -1,7 +1,7 @@
 $black:#333333;
 $white:#f0efef;
 $blue:#192965;
-$lightBlue:#c6d9fa;
+$lightBlue:#32a1f2;
 $orange:#fc6b10;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
 $mainFont:'Poppins';
