--- a/src/app/account-navbar/account-navbar.component.scss
+++ b/src/app/account-navbar/account-navbar.component.scss
@@ -6,6 +6,9 @@
         width: 100%;
         justify-content: space-between;
         align-items: center;
+        background: white;
+        padding: 0px 20px;
+        box-shadow: -1px 2px 4px 0px #e4dfdf;
         &__menu{
 
         }
