--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
 </ul> -->
 <!-- <app-navbar></app-navbar> -->
 
-<app-account-navbar></app-account-navbar>
+<!-- <app-account-navbar></app-account-navbar> -->
 <!-- <app-sidebar></app-sidebar> -->
-<!-- <router-outlet></router-outlet>
-<app-friends></app-friends> -->
+<router-outlet></router-outlet>
+<app-friends></app-friends>
 <!-- <app-all-projects></app-all-projects> -->
 <!-- <app-admin-panel></app-admin-panel> -->
 <!-- <app-drag-timer></app-drag-timer> -->
