--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -4,7 +4,7 @@
     font-family: $mainFont;
     font-weight: $regular;
     &-container{
-        padding: 30px;
+        // padding: 30px;
         display: flex;
         flex: 1 1 100%;
         flex-wrap: wrap;
@@ -62,4 +62,7 @@ app-sidebar{
     width:100%;
     height: 100%;
     border-radius: 50%;
+}
+app-account-navbar{
+    flex: 0 1 100%
 }
