--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -13,17 +13,53 @@
     justify-content: flex-start;
     height: 100%;
     width: 100%;
+    &__logo{
+      padding: 30px;
+    }
     &__btn{
-      border-top-left-radius:20px;
-      border-bottom-left-radius:20px;
-      margin-left:30px;
-      margin-bottom:10px;
+      margin: 6px;
+      text-align: center;
+      padding: 4px 30px;
+      margin-bottom: 15px;
       position: relative;
+      display: flex;
+      align-items: center;
       z-index: 1;
+      cursor: pointer;
+      font-weight: $medium;
+      &:hover{
+        background-color: $lightBlue;
+      }
+     
+      &-icon{
+        color: #f7f7f7;;
+        margin-right: 10px;
+        font-size: 22px;
+      }
+      &:hover &-icon{
+        color: white;
+      }
       &-link{
-        color:$white;
-        text-decoration: none;        
+        font-family: $mainFont;
+        color:#f7f7f7;;
+        text-decoration: none;   
+        font-size: 13px;
+      }
+      &:hover &-link{
+        color: white;
       }
     }
   }
+}
+.logo{
+  font-family: $mainFont;
+  color:$white;
+  text-transform: uppercase;
+  text-align: center;
+}
+.logo span{
+  color: $lightBlue;
+}
+.logo img {
+  height: 65px;
 }
