--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -27,7 +27,7 @@
 <section class="all-projects mb-5">
   <div class="all-projects__wrapper container p-5 ">
     <div class="row">
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6 handler">
           <div class="all-projects__card ">
            <div class="all-projects__card-add">
             <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
@@ -35,7 +35,7 @@
            </div>
           </div>
       </div>
-      <div class="col-lg-3 col-md-6" *ngFor="let project of projects ; let i = index">
+      <div class="col-lg-3 col-md-6 " *ngFor="let project of projects ; let i = index">
         <a href="#" (click)="selectProject($event ,project)">
           <div class="all-projects__card">
             <h2 class="all-projects__card-head pt-5 ml-4">{{project.name}}</h2>
