--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -1,5 +1,7 @@
 @import './../ourVariables.scss';
 .friends{
+    font-family:$mainFont;
+    background-color: $white;
     display: flex;
     font-family: $mainFont;
     font-weight: $regular;
@@ -24,12 +26,12 @@
                 display: flex;
                 margin-right: 10px;
                 flex-wrap: wrap;
-                background-color:$blue;
+                background-color:$pureLight;
                 justify-content: center;
                 color:$white;
                 justify-content: space-between;
-                border-radius: 20px;
-                box-shadow: 1px 1px 7px 1px #192965;
+                border-left:2px solid $lightBlue;
+                box-shadow:$boxShadow;
                 &--img{
                     flex: 0 1 15%;
                     height: 45px;
