--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -4,7 +4,10 @@
   display: flex;
   height: 100%;
   align-items: flex-end;
-  position: relative;
+  position: fixed;
+  left: -220px;
+  transition: all 0.5s ease-in-out;
+
 
   &-container{
     background-color:$blue;
@@ -12,7 +15,6 @@
     display:flex;
     justify-content: flex-start;
     height: 100%;
-    width: 100%;
     &__logo{
       padding: 30px;
     }
@@ -35,6 +37,7 @@
         color: #f7f7f7;;
         margin-right: 10px;
         font-size: 22px;
+        cursor: pointer;
       }
       &:hover &-icon{
         color: white;
@@ -62,4 +65,8 @@
 }
 .logo img {
   height: 65px;
+}
+
+.return{
+  left:0;
 }
