--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,5 +1,7 @@
+@import './../ourVariables.scss';
+
 .nav{
-    background-color: #192965; 
+    background-color: $white; 
     padding: 1rem;
     &-container{
         display: flex;
@@ -10,7 +12,7 @@
             justify-content: space-evenly;
             &-item{
                 &--link{
-                    color:#f0efef;
+                    color:black;
                 }
             }
         }
