--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -3,7 +3,7 @@ $black:#333333;
 $white:#ffffff;
 $lightBlue:#2ca6ef;
 $blue:#192965;
-$orange:#fc6b10;
+$orange:#00ca5d;
 $gray:#999999;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
 $mainFont:'Raleway';
@@ -13,3 +13,4 @@ $medium:500;
 $semiBold:600;
 $bold:700;
 $btnBorderRadius :15px;
+$btnBorderRadius:20px;
