--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -1,6 +1,6 @@
 
 <!-----------------search-add-------------------->
- <section class="add-project my-5">
+ <!-- <section class="add-project my-5">
    <div class="container add-project__wrapper p-5">
      <div class="row">
       <div class="col-10">
@@ -21,17 +21,17 @@
          </div>
       </div>
      </div>
-     </div>
+     </div> -->
  <!--------------------------------------------->
  <!-----------------create project popup-------->
  
  <!-----------------/create project popup------->
  <!--------------------------------------------->
- </section>
+ <!-- </section> -->
 <!-----------------/search-add------------------->
 <!----------------------------------------------->
 <!-----------------all projects------------------>
-<section class="all-projects my-5">
+<!-- <section class="all-projects my-5">
   <div class="all-projects__wrapper container p-5 ">
     <div class="row">
       <div class="col-lg-3 col-md-6" *ngFor="let project of projects ; let i = index">
@@ -45,18 +45,22 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-----------------/all projects----------------->
 <!----------------------------------------------->
-<div class="chart">
+
+<!-- <div class="chart">
   <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
     [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
   </canvas>
-</div>
-
-<!-- <div class="project">
-     <p>project name:{{project.name}}</p>
-     <p>project number:{{i+1}}</p>
-     <img src={{project.attachment}}/>
-     <a  href="data:application/pdf;base64,{{project.attachment}}" target=_blank download>download</a>
-   </div> -->
+</div> -->
+<div class="chart">
+  <canvas baseChart
+    [data]="pieChartData"
+    [labels]="pieChartLabels"
+    [chartType]="pieChartType"
+    [options]="pieChartOptions"
+    [colors]="pieChartColors"
+    [legend]="pieChartLegend">
+  </canvas>
+</div> 
