--- a/src/app/developer-content/developer-content.component.scss
+++ b/src/app/developer-content/developer-content.component.scss
@@ -1,53 +1,165 @@
 @import './../ourVariables.scss';
-.developer-content{
-  font-family:$mainFont;
- &__status{
-  -webkit-box-shadow:$boxShadow;
+
+.developer-content {
+  font-family: $mainFont;
+
+  ::-webkit-scrollbar {
+    width: 10px;
+
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px $lightBlue;
+    border-radius: 10px;
+
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px $lightBlue;
+    background-color: $white
+  }
+
+  &__status {
+    -webkit-box-shadow: $boxShadow;
     -moz-box-shadow: $boxShadow;
-    box-shadow:$boxShadow;
- }
-}
-/////////////////////////////////////////////////////////////////////////////
- 
-    
-    .example-list {
-      border: solid 1px #ccc;
-      min-height: 60px;
+    box-shadow: $boxShadow;
+    border: 1px solid $lightBlue;
+    border-radius: 20px;
+    width: 100px;
+    margin: 0 20px;
+
+    &-list {
+      height: 70vh;
+      overflow-y: auto;
+      margin: -15px;
+    }
+
+    & .example-list {
+      min-height: 77vh;
       background: white;
       border-radius: 4px;
       overflow: hidden;
       display: block;
+      margin: -15px;
     }
-    
-    .example-box {
-      padding: 20px 10px;
-      border-bottom: solid 1px #ccc;
-      color: rgba(0, 0, 0, 0.87);
+
+    &-head {
+      border: 1px solid $lightBlue;
+      color: $blue;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+      text-transform: capitalize;
+      font-size: 15px;
+    }
+
+    &-task {
+      padding: 5px 10px;
       cursor: move;
-      background: pink;
-      font-size: 14px;
+      box-shadow: $boxShadow;
+      border-radius: 10px;
+      margin: 13px 3px;
+      background-color: $white;
+
+      & h2 {
+        margin: unset;
+        font-size: 16px;
+      }
+
+      &-icons,
+      & .pause {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      & mat-icon {
+        color: $lightBlue;
+        cursor: pointer;
+      }
+
+      & i {
+        font-weight: $bold;
+      }
+
+      & .task-owner {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: $lightBlue;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & span {
+          text-transform: capitalize;
+        }
+      }
+
+      & .bonus {
+        color: #90c73e;
+
+      }
     }
-    
-    .cdk-drag-preview {
-      box-sizing: border-box;
-      border-radius: 4px;
-      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                  0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+
+    &-footer {
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      margin-top: 30px;
+      border: 1px solid $lightBlue;
+
+      &-add {
+        width: 40px;
+        height: 40px;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 3px solid $lightBlue;
+        margin: 4px auto;
+        background-color: $blue;
+        position: relative;
+        bottom: 12px;
+        border-radius: 5px;
+        cursor: pointer;
+
+        & mat-icon {
+          color: $white;
+        }
+      }
+
     }
-    
-    .cdk-drag-placeholder {
-      opacity: 0;
-    }
-    
-    .cdk-drag-animating {
-      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-    }
-    
-    .example-box:last-child {
-      border: none;
-    }
-    
-    .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-    }
+  }
+}
+
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-list {
+  height: 70vh !important;
+  overflow-y: auto !important;
+
+}
