--- a/src/app/all-projects/all-projects.component.scss
+++ b/src/app/all-projects/all-projects.component.scss
@@ -1,29 +1,52 @@
 @import './../ourVariables.scss';
-
-main {
-  font-family: $mainFont;
-  background-color: $white;
-}
-
 /*===============
 search-add project
 ================*/
 .add-project {
   &__wrapper {
+    border-radius: 40px;
+    -webkit-box-shadow:$boxShadow;
+    -moz-box-shadow: $boxShadow;
+    box-shadow:$boxShadow;
+
     &-search {
       & input {
         border: unset;
         border-bottom: 3px solid #f0f2f8;
         font-size: 20px;
-        color: $blue;
+        color: $orange;
       }
 
       & input::placeholder {
-        font-size: 18px;
-        color: $blue;
+        font-size: 25px;
+        color: $orange;
       }
     }
+     & .col-2{
+      position: absolute;
+      right: 0;
+      padding: 0;
+      margin: 0;
+     }
+    &-add {
+      background-color: #f0f2f8;
+      border-bottom-left-radius: 20px;
+      border-top-left-radius: 20px;
+      -webkit-box-shadow: $boxShadow;
+      -moz-box-shadow: $boxShadow;
+      box-shadow: $boxShadow;
 
+      &-content {
+        background-color: $orange;
+        border-radius: 10px;
+        width: 50px;
+
+        & mat-icon {
+          color: #fff;
+          font-size: 25px;
+        }
+      }
+    }
   }
 
 }
@@ -32,6 +55,13 @@ search-add project
 all projects
 ===============*/
 .all-projects {
+  &__wrapper {
+    border-radius: 40px;
+    -webkit-box-shadow:$boxShadow;
+    -moz-box-shadow: $boxShadow;
+    box-shadow: $boxShadow;
+  }
+
   & a {
     text-decoration: none;
     color: unset
@@ -43,16 +73,19 @@ all projects
     margin: 0 auto;
     margin-top: 50px;
     position: relative;
-    background-color: $pureLight;
+    background-color: #f0f2f8;
     border-radius: 0 6px 6px 6px;
-    -webkit-box-shadow: $boxShadow;
+    -webkit-box-shadow:$boxShadow;
     -moz-box-shadow: $boxShadow;
     box-shadow: $boxShadow;
+
     &-head {
       color: $blue;
       border-bottom: 1px solid #fd611c;
       width: 50%;
     }
+
+
     &:after,
     &:before {
       content: '';
@@ -61,10 +94,10 @@ all projects
       height: 12px;
       border-radius: 0 20px 0 0;
     }
- 
+
     &:after {
       border-top-left-radius: 20px;
-      background-color: $pureLight;
+      background-color: #f0f2f8;
       top: -12px;
       left: 0px;
     }
@@ -72,35 +105,20 @@ all projects
     &:before {
       border-top-left-radius: 20px;
       border-bottom-left-radius: 20px;
-      background-color: $white;
+      background-color: #fff;
       top: -5px;
       right: 0px;
     }
-    
-    &-add {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      background-color: $lightBlue;
-      cursor: pointer;
-      & mat-icon,
-      & p {
-        color: $pureLight;
-      }
-     
-    }
-  
+
     //hovering
     &:hover {
-      background-color: $lightBlue;
+      background-color: $blue;
     }
 
     &:hover {
 
       &:after {
-        background-color: $lightBlue;
+        background-color: $blue;
       }
 
     }
@@ -118,10 +136,4 @@ all projects
     }
   }
 
-}
-.all-projects__card .create-project{
-  position:relative
-}
-.handler:first-of-type .all-projects__card:after{
-  background-color:#2ca6ef;
 }
