--- a/src/app/developer-content/developer-content.component.scss
+++ b/src/app/developer-content/developer-content.component.scss
@@ -2,67 +2,54 @@
 
 .developer-content {
   font-family: $mainFont;
-  background-color: $white;
 
   ::-webkit-scrollbar {
-    width: 5px;
+    width: 12px;
   }
 
   ::-webkit-scrollbar-track {
-    border-radius: 5px;
-    border: 1px solid #d9dfe2;
+    box-shadow: inset 0 0 6px $lightBlue;
+    border-radius: 10px;
   }
 
   ::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: #eae5e5;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px $lightBlue;
   }
 
   &__status {
-    width: 100px;
-    margin: 0 20px;
-
-    &-list {
-      max-height: 70vh;
-      overflow-y: auto;
-    }
+    -webkit-box-shadow: $boxShadow;
+    -moz-box-shadow: $boxShadow;
+    box-shadow: $boxShadow;
+    height: 80vh;
+    overflow-y: auto;
 
     & .example-list {
-      min-height: 77vh;
+      min-height: 60vh;
+      background: white;
+      border-radius: 4px;
       overflow: hidden;
       display: block;
+
     }
 
     &-head {
-      background-color: $lightBlue;
+      background-color: $blue;
       color: $white;
+      border-bottom-left-radius: 20px;
+      border-top-right-radius: 20px;
       text-transform: capitalize;
-      font-size: 15px;
     }
 
     &-task {
-      padding: 5px 10px;
+      padding: 20px 10px 5px 10px;
       cursor: move;
-      box-shadow: $boxShadow;
-      border-left: 2px solid $lightBlue;
-      margin: 13px 3px;
-      background-color: $pureLight;
-
-      & h2 {
-        margin: unset;
-        font-size: 16px;
-      }
-
-      &-icons,
-      & .pause {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-      }
+      border-bottom-left-radius: 20px;
+      border-top-right-radius: 20px;
+      margin: 10px;
 
       & mat-icon {
-        color: $lightBlue;
+        color: $orange;
         cursor: pointer;
       }
 
@@ -74,44 +61,29 @@
         width: 30px;
         height: 30px;
         border-radius: 50%;
-        background-color: $lightBlue;
+        background-color: $orange;
         display: flex;
         align-items: center;
         justify-content: center;
 
         & span {
-          text-transform: capitalize;
+          color: $white;
+          font-weight: $bold
         }
       }
 
       & .bonus {
-        color: #90c73e;
-
+        color: $orange;
+        font-weight: $bold
       }
     }
 
-    &-footer {
-      background-color: #e2e1e1;
+    &-task:nth-child(odd) {
+      background-color: $white;
+    }
 
-      &-add {
-        width: 40px;
-        height: 40px;
-        margin: auto;
-        display: flex;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        justify-content: center;
-        margin: 4px auto;
-        bottom: 12px;
-        border-radius: 5px;
-        cursor: pointer;
-
-        & mat-icon {
-          color: $lightBlue;
-        }
-      }
-
+    &-task:nth-child(even) {
+      background-color: $lightBlue;
     }
   }
 }
@@ -139,10 +111,4 @@
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-list {
-  height: 70vh !important;
-  overflow-y: auto !important;
-
 }
