--- a/src/app/drag-timer/drag-timer.component.html
+++ b/src/app/drag-timer/drag-timer.component.html
@@ -32,7 +32,13 @@
         <h5>There are no items to lists</h5>
     </ng-template>
 </div>
-  <button type="submit" name="submit" >send</button>
+
+
+
+
+
+
+  <button type="submit">send</button>
 </form>
 
 <div cdkDropListGroup>
