--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,120 +1,43 @@
-@import '../ourVariables.scss';
-.login-body{
-    background-image: url('../../assets/imgs/login/loginBg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-    .row{
-        align-items: center;
-    }
-}
 .login{
-    padding-top: 5rem;;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &-container{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        align-items: center;
-        justify-content: flex-start;
+        flex:0 1 50%;
+        justify-content: center;
         &__wrapper{
-            flex: 0 1 80%;
+            flex: 0 1 70%;
             margin-bottom: 1.5rem;
-            &-btn{
-                padding: 10px 30px;
-                font-size: 17px;
-                background-color: $lightBlue;
-                border-radius: $btnBorderRadius;     
-                box-shadow: $boxShadow;
-                margin-top: 25px;
-                border:none;
-                &:hover{
-                    color: $lightBlue;
-                    background-color: $white;
-                    border: 1px solid $lightBlue;
-                    box-sizing: border-box;
-                }
-            }
-            &-icon{
-                font-size:20px !important;
-                right: 0;
-                margin-bottom: 10px;
-                color: $gray;
-            }
-            &-icon.person{
-                position: absolute;
-            }
+            
             &-input{
                 width: 100%;
                 padding: 0.5rem 0.5rem;
                 border: none;
                 position: relative;
-            }
-        }   
-    }
-    .form-container{
-        padding-left: 10rem;
-    } 
-}
-.img-container{
-    width: 100%;
-}
-::ng-deep .mat-form-field-flex{
-    border-bottom: 1px solid $gray;
-    transition: all 0.2s ease-in-out;
-}
-::ng-deep .mat-form-field-flex:focus-within {
-    border-bottom: 2px solid $lightBlue !important;
-    mat-icon.login-container__wrapper-icon{
-        color: $lightBlue;
-    }
-}
-::ng-deep .mat-form-field-appearance-legacy .mat-form-field-label{
-    font-size: 13px;
-}
-
-// remove default underline in input
-::ng-deep .mat-form-field-underline{
-    display: none;
-}
-.mat-form-field-underline .ng-star-inserted{
-   display: none !important;
-   width: 0 !important;
-}
-
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    color: white !important;
-  }
-
-
-
-
-//************  responsive  **************//
-
-@media only screen and (max-width :780px){
-    .login-body{
-        background-position: bottom;
-    }
-}
-
-@media only screen and (max-width: 430px) {
-    
-    .login{
-        padding: 0;
-        .form-container{
-            padding:2rem;
-            text-align: center;
-            padding-top: 10rem;
-        } 
-        .img-container{
-            margin-left: auto;
-        } 
-        &-container{
-            &__wrapper{
-                flex-grow: 1;   
-                &-btn{
-                    width: 50%;
+                &:focus{
+                    outline: none;
+                }
+                &:hover{
                 }
             }
         }
     }
-} 
+}
+::ng-deep .mat-form-field-flex{
+    border-bottom: 1px solid green;
+}
+::ng-deep .mat-form-field-appearance-legacy .mat-form-field-label{
+    font-size: 13px;
+}
+.hide{
+    font-size:20px !important;
+    margin-bottom: 10px;
+
+}
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    color: white !important;
+  }
