--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -1,24 +1,16 @@
 <section class="friends">
-    
-    <app-sidebar></app-sidebar>
-
-    <section class="friends-container">
-        <app-account-navbar></app-account-navbar>
-
-        <div class="friends-container__search">
-            <input class="friends-container__search-input" type="text">
-            <div class="friends-container__search-dropdown"></div>
-        </div>
-        <div class="friends-container__wrapper">
-            <div class="friends-container__wrapper-allfriends" *ngFor="let friend of friends">
-                <figure class="friends-container__wrapper-allfriends--img">
-                    <img  class="img-full-radius" src="https://i.imgur.com/zOXKdmt.png">
-                </figure>
-                <div class="friends-container__wrapper-allfriends--name"> {{friend.name}}</div>
-                <div class="friends-container__wrapper-allfriends--title"> {{friend.title}}</div>
+  <div class="container-fluid">
+      <div class="friends__content py-2">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="friends__content-img">
+                    <img class="img-fluid" alt="" src="../../assets/imgs/profile/profile.png"/>
+                </div>
+                <div class="friends-content-name">
+                    <p>Mai Mohamed</p>
+                </div>
             </div>
         </div>
-        
-        
-    </section>
+      </div>
+  </div>
 </section>
