--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -2,69 +2,13 @@
 .friends{
     font-family:$mainFont;
     background-color: $white;
-    display: flex;
-    font-family: $mainFont;
-    font-weight: $regular;
-    &-container{
-        // padding: 30px;
-        display: flex;
-        flex: 1 1 100%;
-        flex-wrap: wrap;
-
-        &__search{
-            flex: 0 1 100%;
-        }
-        &__wrapper{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            width: 100%;
-            align-items: flex-start;
-            &-allfriends{
-                flex:0 1 31%;
-                padding: 15px;
-                display: flex;
-                margin-right: 10px;
-                flex-wrap: wrap;
-                background-color:$pureLight;
-                justify-content: center;
-                color:$white;
-                justify-content: space-between;
-                border-left:2px solid $lightBlue;
-                box-shadow:$boxShadow;
-                &--img{
-                    flex: 0 1 15%;
-                    height: 45px;
-
-                }
-                &--name{
-                    flex: 0 1 50%;
-                    text-align: right;
-                    font-weight: $bold;
-                    color:$orange;
-                    font-size: 20px;
-
-                }
-                &--title{
-                    flex:  0 1 100%;
-                    text-align: right;
-                    
-                }
-            }
-        }
+    &__content{
+      border-bottom:1px solid grey;
+      &-img{
+          width:50px;
+          height: 50px;
+          border-radius: 50%;
+          
+      }
     }
-}
-app-sidebar{
-    flex: 0 1 17%;
-    height: 100vh;
-    
-
-}
-.img-full-radius{
-    width:100%;
-    height: 100%;
-    border-radius: 50%;
-}
-app-account-navbar{
-    flex: 0 1 100%
 }
