--- a/src/app/friends/friends.component.scss
+++ b/src/app/friends/friends.component.scss
@@ -8,7 +8,6 @@
         display: flex;
         flex: 1 1 100%;
         flex-wrap: wrap;
-        transition: all 0.5s ease-in-out;
 
         &__search{
             flex: 0 1 100%;
@@ -54,17 +53,16 @@
     }
 }
 app-sidebar{
+    flex: 0 1 17%;
     height: 100vh;
-}
-app-account-navbar{
-    flex: 0 1 100%
+    
+
 }
 .img-full-radius{
     width:100%;
     height: 100%;
     border-radius: 50%;
 }
-
-.marginright{
-    margin-left:220px
+app-account-navbar{
+    flex: 0 1 100%
 }
