--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,7 @@
 
     <section class="login container-fluid">
         <div class="login-google">
+    <!--  -->
         </div> 
         <div class="row">
             <div class="form-container col-lg-6 col-md-6 col-12">
@@ -12,6 +13,7 @@
                         <input matInput formControlName="emailOrUsername" type="text" class="login-container__wrapper-input">
                         <mat-icon class="login-container__wrapper-icon person">person</mat-icon>
                     </mat-form-field>
+                    <!-- <div class="login-container__wrapper " matFormField> -->
                     <mat-form-field class="login-container__wrapper">
                         <mat-label>Enter your password</mat-label>
                         <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" class="login-container__wrapper-input">
