--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -1,17 +1,13 @@
-
 $black:#333333;
-$white:#f7f7f7;
+$white:#f0efef;
 $blue:#192965;
-$lightBlue:#2ca6ef;
+$lightBlue:#32a1f2;
 $orange:#fc6b10;
-$gray:#999999;
-$green:#90c73e;
-$pureLight:#fff;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
-$mainFont:'Raleway';
+$mainFont:'Poppins';
 $light:300;
 $regular:400;
 $medium:500;
 $semiBold:600;
 $bold:700;
-$btnBorderRadius:20px;
+
