--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,32 @@
 
-<app-navbar></app-navbar>
+<!-- <input [(ngModel)]="filtering">
+<ul *ngFor="let item of ArrObj | search:filtering">
+  <li>{{ item.name}}</li>
+  <li>{{ item.role}}</li>
+  <li>{{ item.email}}</li>
+  <li>{{ item.password}}</li>
+  
+</ul> -->
+<!-- <app-navbar></app-navbar> -->
+
+<!-- <app-account-navbar></app-account-navbar> -->
+<!-- <app-sidebar></app-sidebar> -->
 <router-outlet></router-outlet>
-<app-profile></app-profile>
-<app-all-projects></app-all-projects>
 <app-friends></app-friends>
+<!-- <app-all-projects></app-all-projects> -->
+<!-- <app-admin-panel></app-admin-panel> -->
+<!-- <app-drag-timer></app-drag-timer> -->
+<!-- <app-developer-content></app-developer-content> -->
+<!-- 
+<app-developer-content></app-developer-content>
+<app-drag-timer></app-drag-timer>
+<app-developer-content></app-developer-content>
+<app-create-project></app-create-project>
+<app-admin-panel></app-admin-panel> -->
 
-
+<!-- <app-drag-timer></app-drag-timer> -->
+<!-- <app-developer-content></app-developer-content> -->
+<!-- <app-create-project></app-create-project> -->
 
 
 
