--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -3,6 +3,7 @@ $white:#f0efef;
 $lightblue:#2ca6ef;
 $blue:#192965;
 $orange:#fc6b10;
+$green:#00ca5d;
 $gray:#999999;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
 $mainFont:'Raleway';
