--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,27 +3,34 @@
 a:hover{
     text-decoration: none;
 }
+main{
+    font-family: $mainFont;
 
-.nav-link:hover{
-    color:$blue;
-    font-weight: $bold;
 }
+
 
 p{
     font-family: $mainFont;
     color:$gray;
     font-weight: $regular;
 }
+.about-background-image{
+    background-image: url("../../assets/img/right-orange.png"),url("../../assets/img/left-blue.png");
+    background-repeat: no-repeat, no-repeat;
+    background-position: right, left;
+    background-position-y: 30%, 90%;
+    background-position-x: 109%, -9%;
+}
+
 
 .home{
-    font-family:$mainFont;
-    background-image: url('../../assets/img/hero.png');
-    // height: 200vh;
-    background-position: top right;
-    background-size: 65% 18%;
-    background-repeat: no-repeat;
-    &-nav{
-        &__container{
+    &-header{
+        background-image: url('../../assets/img/hero.png');
+        background-position: top right;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 100vh;
+        &__nav{
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -31,67 +38,78 @@ p{
                 color:$lightblue;
                 font-weight: $bold;
                 font-size: 35px;
-                margin-left: 6%;
+                margin-left: 8%;
                 span{
-                    color:$orange;
+                    color:$green;
                     font-weight: $medium;
                 }
             }
+            
             &-list{
                 .nav-link{
                     color:white;
                     font-weight: $medium;
                     font-family: 'lato';
+                    padding-left: 12px;
+                    padding-right: 12px;
+
                 }
-                    .signin{
+                .nav-link:hover{
+                    color: $blue;
+                    transform: scale(1.1);
+                    -webkit-transform: scale(1.1);
+                    -moz-transform: scale(1.1);
+                    -ms-transform: scale(1.1);
+                    -o-transform: scale(1.1);
+}
+                .signin{
                         background-color: white;
                         color:$blue;
                         margin-right: 7px;
                         font-weight: $semiBold;
                     }
-                    .signup{
-                        background-color:$orange;
+                .signup{
+                        background-color:$green;
                         color:white;
                         font-weight: $semiBold;
-                    }
-            }
-        }
-    }  
-
-    // --------------------hero Image-----------------
-
-    &-headr{
-        &__hero{
-            width: 40%;
-            margin-left: 6%;
-            margin-top: 15%;
-            display: flex;
-            .home-header__hero-header{
-                width: 85%;
-                h1{
-                    font-family: $mainFont;
-                    font-size: 70px;
-                    line-height: 50px;
-                    font-weight: $bold;
-                    span{
-                        font-size: 30px;
-                        font-weight: $regular;
-                    }
                 }
             }
+        }
+
+    &__hero{
+        padding-top: 15%;
+        &-header{
+            h1{
+                font-family: $mainFont;
+                font-size: 70px;
+                line-height: 50px;
+                font-weight: $bold;
+                span{
+                    font-size: 30px;
+                    font-weight: $regular;
+                }
+            }
+        }
+        &-content{
+            p{
+                margin-bottom: 4%;
+            }
             .started{
-                background-color:$orange;
+                background-color:$green;
                 color:white;
                 font-weight: $semiBold;
                 padding: 10px;
             }
         }
-    }
-    
-     // --------------------How Work It-----------------
+    }    
+}
+
+
+
+     // --------------------Start How Work It-----------------
 
     &-work{
-        padding: 3% 0%;
+        padding: 2% 0%;
         &__container{
             &-row{
                 display: flex;
@@ -104,11 +122,11 @@ p{
                     padding-left: 7%;
                     padding-top: 15%;
                     h5{
-                        color:$orange;
+                        color:$green;
                         font-family: $mainFont;
-                        font-size: 20px;
+                        font-size: 25px;
                         font-weight: $medium;
-                        margin-bottom: 10px;
+                        margin-bottom: 2%;
                     }
                     h3{
                         color:$blue;
@@ -125,13 +143,12 @@ p{
         }
     }
 
-    // --------------------About Us-----------------
+    // --------------------End How Work It-----------------
+
+    // -------------------- Start About Us-----------------
 
     &-about{
-        padding: 3% 0%;
-        background-image:url('../../assets/img/right-orange.png');
-        background-repeat: no-repeat;
-        background-position: right;
+        padding: 3% 0%;       
         &__container{
             &-row{
                 display: flex;
@@ -141,11 +158,11 @@ p{
                     padding-top: 15%;
                     padding-right: 6%;
                     h5{
-                        color:$orange;
+                        color:$green;
                         font-family: $mainFont;
-                        font-size: 20px;
+                        font-size: 25px;
                         font-weight: $medium;
-                        margin-bottom: 10px;
+                        margin-bottom: 2%;
                     }
                     h3{
                         color:$blue;
@@ -161,7 +178,10 @@ p{
         }
     }
 
-    // --------------------Features-----------------
+    // --------------------End About Us-----------------
+
+
+    // --------------------Start Features-----------------
 
     &-features{
         padding: 3% 0%;
@@ -170,11 +190,11 @@ p{
                 text-align: center;
                 font-family: $mainFont;
                 h5{
-                    color:$orange;
+                    color:$green;
                     font-family: $mainFont;
-                    font-size: 20px;
+                    font-size: 25px;
                     font-weight: $medium;
-                    margin-bottom: 10px;
+                    margin-bottom: 2%;
                 }
                 h3{
                     color:$blue;
@@ -195,6 +215,7 @@ p{
                         box-shadow: $boxShadow;
                         padding:5%;
                         text-align: center;
+                        border-radius: 25px;
                         mat-icon{
                             font-size: 100px;
                             height: auto;
@@ -206,15 +227,27 @@ p{
                             font-size: 20px;
                             color: $lightblue;
                             font-weight: $bold;
-                            margin-top: 2%;
+                            margin-top: 3%;
                         }
                 }
+                &__item:hover{
+                    background-color:$blue;
+                    mat-icon{
+                        color: white;
+                    }
+                    h4{
+                    color: white;
+                    }
+            }
+
             }
         }
     }
 
-        // --------------------Team-----------------
+    // --------------------End Features-----------------
 
+
+    // --------------------Start Team-----------------
 
         &-team{
             padding: 3% 0%;
@@ -226,11 +259,11 @@ p{
                 padding: 3% 0%;
                 text-align: center;
                 h5{
-                    color:$orange;
+                    color:$green;
                     font-family: $mainFont;
-                    font-size: 20px;
+                    font-size: 25px;
                     font-weight: $medium;
-                    margin-bottom: 10px;
+                    margin-bottom: 2%;
                 }
                 h3{
                     color:$blue;
@@ -239,27 +272,81 @@ p{
                     font-weight: $bold;
                 }
             } 
+            &__gallery{
+                margin: auto;
+                justify-content: space-between;
+                position: relative;
+                top: 109px;
+            &-item{
+                h3{
+                    font-family: $mainFont;
+                    color: $blue;
+                    font-size: 25px;
+                    text-align: center;
+                    font-weight: $semiBold;
+                }
+                    img{
+                        border:4px solid white;
+                    }
+                    img:hover{
+                        transform: scale(1.2);
+                        -webkit-transform: scale(1.2);
+                        -moz-transform: scale(1.2);
+                        -ms-transform: scale(1.2);
+                        -o-transform: scale(1.2);
+}
+                }
+            }
+
         }
 
-    // --------------------Footer-----------------
+    // --------------------End Team-----------------
+
+
+    // --------------------Start Footer-----------------
 
     &-footer{
         background-color:$blue;
-        padding: unset 5%;
-        .home-footer__contaier_header{
-            display: flex;
-            justify-content: space-evenly;
+        padding: 10% 0 4% 0%;
+        .boxheader{
+            display:flex;
+            justify-content: space-between;
+            align-items:center;
         }
-        .home-footer__container-content__item{
-            a{
-                text-decoration: none;
+
+        &__container{
+            padding: 0 2% ;
+            &-header{
+                color: white;
+                justify-content: flex-end;
+                padding: 2% 0%;
+                margin-right: 10%;
+               .form-group{
+                   h3{
+                       font-size: 20px;
+                       margin: auto;
+                       font-family: $mainFont;
+                   }
+               }
             }
-            max-width: 24%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
+            &-content{
+                justify-content: space-evenly;
+                padding: 0 8%;
+                &-item{
+                 
+                    .nav-link{
+                        color: white;
+                    }
+                }
+            }
         }
+
+    
     }
+
+
+    // --------------------End Footer-----------------
+
 }
 
     // --------------------End Landing Page-----------------
