edit my navbar and aside

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,12 @@
 <app-developer-content></app-developer-content>
 <router-outlet></router-outlet>
 <app-create-project></app-create-project> -->
-<!-- <app-navbar></app-navbar>
+<app-account-navbar></app-account-navbar>
+<app-navbar></app-navbar> 
 <router-outlet></router-outlet>
 <app-profile></app-profile>
 <app-all-projects></app-all-projects>
-<app-friends></app-friends> -->
+<app-friends></app-friends>
 
 
 <!-- ----------------profile -------------- -->
