--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,11 @@
 
-<!-- <app-all-projects></app-all-projects>
- <app-admin-panel></app-admin-panel>
-<app-drag-timer></app-drag-timer>
-<app-developer-content></app-developer-content>
-<router-outlet></router-outlet>
-<app-create-project></app-create-project> -->
+
 <app-account-navbar></app-account-navbar>
 <app-navbar></app-navbar> 
 <router-outlet></router-outlet>
 <app-profile></app-profile>
 <app-all-projects></app-all-projects>
-<app-friends></app-friends>
 
+<app-all-friends></app-all-friends>
 
 
