--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -35,7 +35,6 @@ h3{
         }
     }
     &__info:first-of-type{
-        box-sizing: content-box;
         padding: 3rem;
         margin-top: 15rem;
     }
@@ -46,8 +45,12 @@ h3{
     }
     &__comments{
         background-color: white;
-        padding: 2rem;
-        border-bottom: 1px solid #eeeeee;
+        max-height:200px;
+        overflow: auto;
+        margin-top: 3rem;
+        &-comment{
+            border-bottom: 1px solid #eeeeee;
+        }
         &-comment__user-img{
             figure{
                 height: 40px;
@@ -62,6 +65,36 @@ h3{
        
     }
 }
+.comments-parent__formContainer{
+    &-form{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        textarea {
+            width: 80%;
+            border-radius: 20px;
+            padding: 10px 20px;
+            font-size: 12px;
+            border: 1px solid #eeeeee;
+            max-height: 75px;
+        }
+        button{
+        width: 15%;
+        margin-left: auto;
+        padding: 10px 30px;
+        font-size: 17px;
+        background-color: $lightBlue;
+        border-radius: 20px;
+        box-shadow: $boxShadow;
+        border: none;
+        color: $white;
+            &:disabled{
+                background-color: #74c4f3;
+            }
+        }
+    }
+}
+
 figure{
     background-color: #00ca5d;
     height: 100px;
@@ -72,23 +105,49 @@ figure{
         width: 100%;
     }
 }
-.comments-parent{
-    max-height:200px;
-    overflow: auto;
-    margin-top: 3rem;
+// *******star rating**********//
+  .star-rating-filled{
+    fill:gold;
+
 }
+.star-rating-blank{
+    fill:   lightgray;
+}
+.col-12{
+    background-color: $white;
+}
+.hovering-data{
+    height: 20px;
+    width: 20px;
+    border: 1px solid #eeeeee;
+    border-radius: 50%;
+    display: flex;
+    margin-left: 10px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: $boxShadow;
+    background-color: $white;
+    position: relative;
+    z-index: 5;
+}
+
+
+// ********** scroll style ************* //
+
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 6px;
   }
 
   ::-webkit-scrollbar-track {
     border-radius: 5px;
     border: 1px solid #d9dfe2;
+    background-color: rgb(235, 235, 235);
+
   }
 
   ::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background-color: #eae5e5;
+    background-color: #cecece;
   }
   .borderLeft{
       border-left: 3px solid $lightBlue;
