--- a/src/app/all-friends/all-friends.component.html
+++ b/src/app/all-friends/all-friends.component.html
@@ -3,11 +3,15 @@
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="friends-tab" data-toggle="tab" href="#friends" role="tab" aria-controls="friends"
-          aria-selected="true">Home</a>
+          aria-selected="true">Friends</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="request-tab" data-toggle="tab" href="#request" role="tab" aria-controls="request"
           aria-selected="false">Friend Request</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="find-tab" data-toggle="tab" href="#find" role="tab" aria-controls="find"
+          aria-selected="false">Find Friend</a>
       </li>
     </ul>
     <div class="tab-content mb-4" id="myTabContent">
@@ -16,6 +20,9 @@
       </div>
       <div class="tab-pane fade" id="request" role="tabpanel" aria-labelledby="request-tab">
         <app-friend-request></app-friend-request>
+      </div>
+      <div class="tab-pane fade" id="find" role="tabpanel" aria-labelledby="find-tab">
+        <app-find-friend>></app-find-friend>
       </div>
     </div>
   </div>
