--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -1,3 +1,5 @@
+
+
 <section class="developer-content ">
   <div class="container-fluid pl-0">
     <div class="row">
@@ -5,14 +7,15 @@
         <div class="container">
           <div class="row" cdkDropListGroup>
             <div class="col developer-content__status">
-              <h2 class="text-center developer-content__status-head">Pending</h2>
+              <h2 class="text-center developer-content__status-head"
+              data-step="1" data-intro="pending tasks" data-position='right'>Pending</h2>
               <div class="developer-content__status-list" cdkDropList [cdkDropListData]="todo"
                 (cdkDropListDropped)="drop($event)" cdkDropList="disable">
                 <div class=" developer-content__status-task" *ngFor="let item of todo" cdkDrag
                   cdkDragDisabled="{{disabledDrag}}">
                   <h2>{{item.name}}</h2>
                   <p><i>Time:</i> {{item.totalTime}}</p>
-                  <div class="developer-content__status-task-icons">
+                  <div class="developer-content__status-task-icons" >
                     <mat-icon aria-hidden="false" aria-label="Example menu icon">menu</mat-icon>
                     <div class="task-owner">
                       <span>m</span>
@@ -27,7 +30,8 @@
               </div>
             </div>
             <div class=" col developer-content__status">
-              <h2 class="text-center  developer-content__status-head">working On</h2>
+              <h2 class="text-center  developer-content__status-head"
+              data-step="2" data-intro="working on tasks" data-position='right'>working On</h2>
               <div class="parent-status" cdkDropList [cdkDropListData]="workingOn" class="example-list"
                 (cdkDropListDropped)="drop($event)">
                 <div class=" developer-content__status-task" *ngFor="let item of workingOn" cdkDrag>
@@ -48,7 +52,8 @@
               </div>
             </div>
             <div class="col developer-content__status">
-              <h2 class="text-center  developer-content__status-head ">Finished</h2>
+              <h2 class="text-center  developer-content__status-head "
+              data-step="3" data-intro="finished tasks" data-position='right'>Finished</h2>
               <div class="developer-content__status-list" cdkDropList [cdkDropListData]="finished" class="example-list"
                 (cdkDropListDropped)="drop($event)">
                 <div class=" developer-content__status-task " *ngFor="let item of finished" cdkDrag>
@@ -73,4 +78,4 @@
       </div>
     </div>
   </div>
-</section>
+ </section>
