--- a/src/app/friend-request/friend-request.component.html
+++ b/src/app/friend-request/friend-request.component.html
@@ -1,22 +1,22 @@
 <section class="request py-3">
- <div class="container">
-  <div class="request__content">
-   <div class="request__content-info">
-     <div class="request__content-info-img">
-       <img class="img-fluid" src="../../assets/imgs/friends/friend.png" alt="" />
-     </div>
-     <div class="request__content-info-name">
-       <p>ahmed mohamed</p>
-     </div>
-   </div>
-   <div class="request__content-position">
-     <p>ui developer</p>
-   </div>
-   <div class="request__content-state">
-    <button class="btn btn-info mx-2">Accept</button>
-     <button class="btn btn-danger">Reject</button>
-   </div>
-   
- </div>
- </div>
+  <div class="container">
+    <div class="request__content" *ngFor="let friend of friends">
+      <div class="request__content-info">
+        <div class="request__content-info-img">
+          <img class="img-fluid" src="../../assets/imgs/friends/friend.png" alt="" />
+        </div>
+        <div class="request__content-info-name">
+          <p>{{friend.name}}</p>
+        </div>
+      </div>
+      <div class="request__content-position">
+        <p>{{friend.title}}</p>
+      </div>
+      <div class="request__content-state">
+        <button class="btn btn-info mx-2" (click)="addFriend($event,friend)">Accept</button>
+        <button class="btn btn-danger" (click)="rejectFriend($event,friend)">Reject</button>
+      </div>
+
+    </div>
+  </div>
 </section>
