--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
                     </mat-form-field>
                     <!-- </div> -->
                     <div class="login-container__wrapper">
-                        <button type="submit" class=" login-container__wrapper-btn btn btn-primary">Login</button>
+                        <button type="submit" class=" login-container__wrapper-btn btn btn-primary" [routerLink]="['/account']" >Login</button>
                     </div>
                 </form>
             </div>
