--- a/src/app/ourVariables.scss
+++ b/src/app/ourVariables.scss
@@ -8,7 +8,7 @@ $gray:#999999;
 $green:#90c73e;
 $pureLight:#fff;
 $boxShadow:0px 6px 5px 0px rgba(245, 242, 245, 1);
-$mainFont:'Raleway';
+$mainFont:'Poppins';
 $light:300;
 $regular:400;
 $medium:500;
