--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,2 @@
-<!-- <app-navbar></app-navbar> -->
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-account-navbar></app-account-navbar> -->
-<!-- <app-sidebar></app-sidebar> -->
-<!-- <app-all-projects></app-all-projects>
- <app-admin-panel></app-admin-panel>
-<app-drag-timer></app-drag-timer>
-<app-developer-content></app-developer-content>
 <router-outlet></router-outlet>
-<app-create-project></app-create-project> -->
-<!-- <app-account-navbar></app-account-navbar>
-<app-navbar></app-navbar> 
-<router-outlet></router-outlet>
-<app-profile></app-profile>-->
-<!-- <app-all-projects></app-all-projects> -->
-<!-- <app-friends></app-friends>  -->
-<!-- <app-login></app-login> -->
-<app-register></app-register>
-<!-- ----------------profile -------------- -->
-<!-- <app-profile></app-profile> -->
-<app-home></app-home>
-<!-- <app-friend-request></app-friend-request>
-<app-all-friends></app-all-friends> -->
+<!-- <app-account></app-account> -->
