--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,22 +17,22 @@
                         <a class="nav-link active" href="#">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">HOW IT WORK</a>
+                        <a class="nav-link" href="#howItWork">HOW IT WORK</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ABOUT US</a>
+                        <a class="nav-link" href="#homeAbout">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OUR FEATURES</a>
+                        <a class="nav-link" href="#feature">OUR FEATURES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OUR TEAM</a>
+                        <a  class="nav-link" href="#team">OUR TEAM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="signin nav-link rounded-pill" href="#">Sign In</a>
+                        <a routerLink='/login' class="signin nav-link rounded-pill">Sign In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="signup nav-link rounded-pill" href="#">Sign Up</a>
+                        <a routerLink='/register' class="signup nav-link rounded-pill">Sign Up</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
 
     <!-------------------How it Work------------------------->
 
-    <div class="about-background-image">
+    <div id="howItWork" class="about-background-image">
         <section class="home-work">
             <div class="home-work__container container">
                 <div class="home-work__container-row row">
@@ -85,7 +85,7 @@
 
         <!-------------------About Us------------------------->
 
-        <section class="home-about">
+        <section class="home-about" id="homeAbout">
             <div class="home-about__container container">
                 <div class="home-about__container-row row">
                     <div class="col-md-6">
@@ -114,7 +114,7 @@
 
         <!-------------------Our Features------------------------->
 
-        <section class="home-features">
+        <section class="home-features" id="feature">
             <div class="home-features__container container">
                 <div class="home-features__container-header">
                     <h5>Our Features</h5>
@@ -153,7 +153,7 @@
 
     <!-------------------Our Team------------------------->
 
-    <section class="home-team  container-fluid">
+    <section class="home-team  container-fluid" >
         <div class="home-team_img">
             <img src="../../assets/img/team1.png" alt="" class="img-fluid">
         </div>
@@ -163,7 +163,7 @@
                 <h3>Our Team</h3>
             </div>
             <div class="home-team__gallery row">
-                <div class="home-team__gallery-item col-md-2">
+                <div class="home-team__gallery-item col-md-2" id="team">
                     <h3>Ali</h3>
                     <img src="../../assets/img/ali.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
@@ -211,16 +211,16 @@
                     <a class="nav-link active" href="#">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">HOW IT WORK</a>
+                    <a class="nav-link" href="#howItWork">HOW IT WORK</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
+                    <a class="nav-link" href="#homeAbout">ABOUT US</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">OUR FEATURES</a>
+                    <a class="nav-link" href="#feature">OUR FEATURES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">OUR TEAM</a>
+                    <a class="nav-link" href="#team">OUR TEAM</a>
                 </li>
             </ul>
             <p> 2020 All Right Reserved By TODOLESS </p>
