--- a/src/app/all-projects/all-projects.component.html
+++ b/src/app/all-projects/all-projects.component.html
@@ -27,7 +27,7 @@
 <section class="all-projects mb-5">
   <div class="all-projects__wrapper container p-5 ">
     <div class="row">
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6" (click)="openDialog()">
           <div class="all-projects__card">
            <div class="all-projects__card-add">
             <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
@@ -39,10 +39,15 @@
         <a href="#" (click)="selectProject($event ,project)">
           <div class="all-projects__card">
             <h2 class="all-projects__card-head pt-5 ml-4">{{project.name}}</h2>
-            <p class="all-projects__card-date ml-4 pt-4"><i class="mr-2">Start Date:</i>{{project.startDate}}</p>
-            <p class="all-projects__card-date ml-4"><i class="mr-2">End Date:</i>{{project.endDate}}</p>
+            <p class="all-projects__card-date ml-4 pt-4"><i class="mr-2" >Start Date:</i>
+              {{project.startDate.seconds *1000 | date:'longDate'}}
+            </p>
+            <p class="all-projects__card-date ml-4"><i class="mr-2">End Date:</i>
+              {{project.endDate.seconds *1000 | date:'longDate'}} 
+            </p>
           </div>
         </a>
+        <button (click)="delete($event,project)">del</button>
       </div>
     </div>
   </div>
