--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<!-- <app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-profile></app-profile>
-<app-all-projects></app-all-projects>
-<app-friends></app-friends> -->
+<!-- <app-navbar></app-navbar> -->
+<!-- <router-outlet></router-outlet> -->
+<!-- <app-profile></app-profile> -->
+<!-- <app-friends></app-friends> -->
+<!-- <app-all-projects></app-all-projects> -->
 <app-project-details></app-project-details>
+<!-- <app-project-view></app-project-view> -->
+<!-- <app-developer-content></app-developer-content> -->
