--- a/src/app/developer-content/developer-content.component.html
+++ b/src/app/developer-content/developer-content.component.html
@@ -1,10 +1,7 @@
 <section class="developer-content ">
   <div class="container-fluid pl-0">
     <div class="row">
-      <div class="col-2 ">
-        <app-sidebar></app-sidebar>
-      </div>
-      <div class="col-10 pt-4 pb-2">
+      <div class="col-12 pt-4 pb-2">
         <div class="container">
           <div class="row" cdkDropListGroup>
             <div class="col developer-content__status">
@@ -23,7 +20,7 @@
                   </div>
                 </div>
               </div>
-              <div class="developer-content__status-footer text-center">
+              <div class="developer-content__status-footer text-center" (click)="openDialog()">
                 <div class="developer-content__status-footer-add">
                   <mat-icon aria-hidden="false" aria-label="Example add icon">add</mat-icon>
                 </div>
