--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -1,30 +1,30 @@
 <h3 class="text-center h2">Edit Project</h3>
-<form class="example-form">
-  <mat-form-field class="example-full-width">
+<form  class="example-form">
+  <mat-form-field  class="example-full-width">
     <mat-label>Project Name</mat-label>
-    <input matInput placeholder="" value="" />
+    <input [value]='project.name' matInput placeholder=""  />
   </mat-form-field>
   <mat-form-field class="example-full-width">
     <mat-label>Project Privacy</mat-label>
-    <input matInput placeholder="" value="" />
+    <input [value]='project.privacy' matInput placeholder="" value="" />
   </mat-form-field>
   <div class="example-full-width d-flex justify-content-between">
     <mat-form-field>
       <mat-label>Start Date</mat-label>
-      <input matInput [matDatepicker]="picker" />
+      <input [value]='project.startDate' matInput [matDatepicker]="picker" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
     <mat-form-field>
       <mat-label>End Date</mat-label>
-      <input matInput [matDatepicker]="picker1" />
+      <input [value]='project.endDate' matInput [matDatepicker]="picker1" />
       <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
       <mat-datepicker #picker1></mat-datepicker>
     </mat-form-field>
   </div>
   <mat-form-field class="example-full-width">
     <mat-label>Task Description</mat-label>
-    <textarea matInput placeholder=""></textarea>
+    <textarea [value]='project.description' matInput placeholder=""></textarea>
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
@@ -45,4 +45,4 @@
     </mat-autocomplete>
   </mat-form-field>
   <button mat-button class="save-edit btn-info">Save</button>
-</form>
+</form >
