--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,11 +1,13 @@
 <section class="container pt-4">
-  <section class="projects-nav row d-flex justify-content-between">
+  <!-- <section class="projects-nav row d-flex justify-content-between">
     <div class="btn-group  p-0" role="group" aria-label="Basic example">
       <button type="button" routerLinkActive="project-active" class="btn project-details-btn project-active">Project Details</button>
       <button type="button" routerLinkActive="project-active" class="btn project-flow-btn">Project Flow</button>
     </div>
-    <button mat-button (click)="openDialog()" class="edit-project">Edit Project</button>
-  </section>
+  </section> -->
+  <div class="row d-flex justify-content-end pr-4">
+    <button mat-button (click)="openDialog()" class="edit-project"><mat-icon>create</mat-icon> Edit Project</button>
+  </div>
 
   <section class="row project-details justify-content-between mb-5">
     <div class="col-md-6">
@@ -21,8 +23,8 @@
           </li>
           <li class="d-flex date-details row">
             <div class="col-6">
-              <span class="title h3">Start Date : </span>
-              <span class="data">{{ project.startDate }}</span>
+              <span class="title h3" >Start Date : </span>
+              <span class="data">{{ project.startDate | date:'shortDate' }}</span>
             </div>
             <div class="col-6">
               <span class="title h3">End Date : </span>
@@ -39,7 +41,9 @@
     </div>
     <div class="col-md-6">
       <div class="container">
-        <app-all-projects></app-all-projects>
+          <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+            [options]="pieChartOptions" [colors]="pieChartColors" [legend]="pieChartLegend">
+          </canvas>
       </div>
     </div>
   </section>
