--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -19,8 +19,7 @@ p{
 }
 h3{
     margin-bottom: 2px;
-    text-transform: capitalize;
-    
+    text-transform: capitalize;   
 }
 .profile{
     background-color: #f7f7f7;
@@ -72,14 +71,20 @@ h3{
         justify-content: center;
         textarea {
             width: 80%;
-            border-radius: 20px;
             padding: 10px 20px;
             font-size: 12px;
             border: 1px solid #eeeeee;
             max-height: 75px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            resize: none;
+            border: none;
+            box-shadow: 0px 0px 3px 0px #e8e8e8e8;        
+            &:focus{
+                outline: none;
+            }
         }
         button{
-        width: 15%;
         margin-left: auto;
         padding: 10px 30px;
         font-size: 17px;
@@ -88,6 +93,9 @@ h3{
         box-shadow: $boxShadow;
         border: none;
         color: $white;
+        display: block;
+        width: 100%;
+    
             &:disabled{
                 background-color: #74c4f3;
             }
@@ -101,6 +109,7 @@ figure{
     width: 100px;
     border-radius: 50%;
     vertical-align: middle;
+    overflow: hidden;
     img{
         width: 100%;
     }
@@ -117,18 +126,20 @@ figure{
     background-color: $white;
 }
 .hovering-data{
-    height: 20px;
-    width: 20px;
-    border: 1px solid #eeeeee;
-    border-radius: 50%;
+    border: 1px solid $gray;
     display: flex;
+    padding: 10px 35px ;
     margin-left: 10px;
     justify-content: center;
     align-items: center;
-    box-shadow: $boxShadow;
-    background-color: $white;
-    position: relative;
+    background-color: rgba(0, 0, 0,0.7);
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%);
+    color: white;
     z-index: 5;
+    top:100%;
+    transition: all 0.3s ease-in-out;
 }
 
 
@@ -151,4 +162,7 @@ figure{
   }
   .borderLeft{
       border-left: 3px solid $lightBlue;
+  }
+  .rate-and-sumbit{
+    margin-left: 40px;
   }
