--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -120,3 +120,20 @@
         }
     }
 } 
+.wrongData{
+    position: absolute;
+    right: 40px;
+    top: 0;
+    color: red;
+    font-size: 10px;
+}
+.wrongPassword{
+    position: absolute;
+    right: 20px;
+    top: 0;
+    color: red;
+    font-size: 10px;
+}
+.button-hide{
+    cursor: pointer;
+}
