--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,16 +4,16 @@
       <div class="aside-container__logo">
         <h2 class="logo"><img src="https://i.imgur.com/ZWP4nIw.png">  Todo<span>less</span></h2>
       </div>
-      <div routerLinkActive="active" [routerLink]="['/account','profile']" class="aside-container__btn">
+      <div routerLinkActive="active" [routerLink]="['/account',id,'profile']" class="aside-container__btn">
         <mat-icon class="aside-container__btn-icon">person_outline</mat-icon>
         <a class="aside-container__btn-link">
           Profile</a>
       </div>
-      <div routerLinkActive="active"[routerLink]="['/account','projects']" class="aside-container__btn">
+      <div routerLinkActive="active"[routerLink]="['/account',id,'projects']" class="aside-container__btn">
         <mat-icon class="aside-container__btn-icon">dashboard</mat-icon>
         <a class="aside-container__btn-link" >Project</a>
       </div>
-      <div routerLinkActive="active" [routerLink]="['/account','friends']" class="aside-container__btn">
+      <div routerLinkActive="active" [routerLink]="['/account',id,'friends']" class="aside-container__btn">
         <mat-icon class="aside-container__btn-icon">supervisor_account</mat-icon>
         <a class="aside-container__btn-link" >Friends</a>
       </div>
